# iriswear

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
iriswear/: __init__.py  announce.py  cli.py  config.py  speech.py
iriswear/announce/: __init__.py
iriswear/notify/: __init__.py  announce.py
