[metadata]
name = iriswear
version = attr: iriswear.__version__
author = Iris System
author_email = iris@iris.ac.nz
description = The wearable tech project
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/u1f408/iriswear
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: Other/Proprietary License

[options]
include_package_data = False
packages = find:

python_requires = >=3.9
install_requires =

[options.extras_require]
build =
    bork==6.0.0b1
    pip==21.0.1
    setuptools==54.1.2
    wheel==0.36.2

[bdist]
bdist_base = build/bdist

[clean]
build_base = build
build_lib  = build/lib
bdist_base = build/bdist
all = True
